Make nocache refresh hack configurable in profile

Version 1.16.4 - Apr. 15, 2016
Properly escape some parameters
Add caching hack for aggressively caching browsers (e.g. links)
Improve invalid filter handling + allow new line match with \n
Fix a few forms to be used cookie-less

Version 1.16.3 - Apr. 14, 2016
Fix warning on redirection of links without a scheme

Version 1.16.2 - Apr. 14, 2016
Add CSS classes and move more css to the database
Allow extreme captcha to be solved in both directions

Version 1.16.1 - Apr. 13, 2016
Fixed a typo

Version 1.16 - Apr. 13, 2016
Use constants for configuration
Simplify extreme captcha code generation
Add language setting to profile
Add checks for required extensions
Move some more settings to the database
Add CSS to limit list of chatters hight
Attempt to create database when there is no connection
Add fallback option for moderator approval
Fix guestaccess selection in setup
Add option to let guests register themselves
Add better fatal error handling
Fixed handling of links with special characters

Version 1.15.3 - Mar. 6, 2016
Allow using html tags in linkfilter without breaking dereferrer or image embed
Added French translation
Added 2 Spanish translations.

Version 1.15.2 - Jan. 26, 2016
Don't display kicked people
Fix deadlock warning
Added Indonesian translation

Version 1.15.1 - Dec. 19, 2015
Fix XSS vulnerability in change nickname + make it available for registered users only

Version 1.15 - Dec. 17, 2015
Made code reading easier for newbies
Removed inefficient memcached caching of members and ignored
Display access denied page for non-authorized use of sub-sections.
Added change nickname option in profile
Various bugfixes

Version 1.14.1 - Nov. 2, 2015
Ignore possible deadlock warning
Only display the let users in button when there are guests waiting to be let in
Fix filter and ignore feature if they have multiple values

Version 1.14 - Oct. 31, 2015
Added support for sqlite and PostgreSQL database engines